--- a/index.css
+++ b/index.css
@@ -86,3 +86,18 @@ body {
   font-size: 16pt;
   font-weight: 500;
 }
+
+.card-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+
+.card {
+  box-shadow: 0px 4px 8px rgba(108, 0, 250, 0.411); /* Shadow effect */
+}
+
+.card-pic {
+  width: 100%;
+}
