--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@ body {
 .card {
   box-shadow: 0px 4px 8px rgba(108, 0, 250, 0.411); /* Shadow effect */
   border-radius: 8px;
+  width: 100%;
 }
 
 .card-pic {
@@ -113,7 +114,7 @@ body {
 
 .tile {
   position: relative;
-  height: 200px;
+  height: 250px;
   width: 100%;
 }
 
@@ -131,17 +132,37 @@ body {
   border-radius: 8px;
 }
 
+.bottom-area {
+  background-color: rgb(215, 215, 215);
+  margin-top: 25px;
+  padding-block: 25px;
+}
+
+.wall.bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+}
+
+.social-area {
+  display: flex;
+  justify-content: right;
+  font-size: 25pt;
+  gap: 15px;
+  color: purple;
+}
+
 @media screen and (max-width: 800px) {
   .card-area {
     grid-template-columns: 1fr 1fr;
+  }
+  .card-area.small {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 420px) {
   .card-area {
     grid-template-columns: 1fr;
-  }
-  .card {
-    width: 100%;
   }
 }
