--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-bottom: 15px;
-  background-color: rgb(215, 215, 215);
+  background-color: rgb(255, 199, 232);
 }
 
 .profile-pic {
@@ -150,7 +150,7 @@ body {
 }
 
 .bottom-area {
-  background-color: rgb(215, 215, 215);
+  background-color: rgb(255, 199, 232);
   margin-top: 25px;
   padding-block: 25px;
 }
@@ -194,6 +194,7 @@ body {
   color: purple;
   box-shadow: none;
   font-size: 12pt;
+  font-weight: 500;
 }
 
 .top-pic {
